# spacebar

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
spacebar/astro/: bodies.py
spacebar/astro/orbit/: elements.py
spacebar/astro/propagators/: inertial.py
spacebar/docs/: _toc.yml  help.md  home.md  module-1.md  module-2.md
spacebar/examples/: three_d_orbit.py
spacebar/math/: linalg.py
spacebar/tests/astro/: test_bodies.py
spacebar/tests/astro/orbit/: test_elements.py
spacebar/tests/astro/propagators/: test_inertial.py
spacebar/tests/math/: test_linalg.py
spacebar/tests/time/: test_utc.py
spacebar/time/: utc.py
