[tool.poetry]
name = "spacebar"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"

pytest = { version = "^7.0", optional = true }

[tool.poetry.extras]
test = ["pytest"]
dev = ["pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
