[tool.poetry]
name = "spacebar"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"

pytest = { version = "^7.0", optional = true }
pre-commit = { version = "^2.18", optional = true }
tox = { version = "^3.25", optional = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
test = ["pytest"]
dev = ["pytest", "pre-commit", "tox"]

[tool.black]
line-length = 120
force-exclude = '''
^/(
  (
      \.eggs
    | \.git
    | \.pytest_cache
    | \.tox
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
filter_files = true
line_length = 120

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
